--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,24 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testCompileOnly 'org.projectlombok:lombok:1.18.22'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'com.codeborne:selenide:6.1.2'
-    testImplementation 'io.rest-assured:rest-assured:4.3.0'
-    testImplementation 'com.google.code.gson:gson:2.8.6'
+    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+    testImplementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.projectlombok:lombok:1.18.24'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'com.codeborne:selenide:6.15.0'
+    implementation 'com.codeborne:selenide:6.15.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation("io.github.bonigarcia:webdrivermanager:5.3.3")
+    implementation 'io.rest-assured:rest-assured:5.3.0'
+
+
+    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 test {
